...
            fillDefailtValues()
        }
        .onChange(of: selectedType) {
            iconsToShow = selectedType.getIcons()
        }
        .padding()
        .navigationTitle("Icon")
        .toolbar {
            ToolbarItem(placement: .topBarTrailing) {
                Button(action: {
                    saveIcon()
                    dismiss()
                }, label: {
...
