...
                }
                .padding(.bottom)
                CalculatorView(viewModel: CalculatorViewModel(showCalculator: false), resultString: $amount)
                Spacer()
            }
            .padding()
            .navigationTitle(destination.type.isAccount ? "New transaction" : "New expense")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .confirmationAction) {
                    Button(" Done ") {
                        makeTransfer()
                        isSheetPresented.toggle()
...
